# superHealth

./: .coverage  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  schema.sql
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: juejin-article.md  project-design.md  service-management.md
examples/: config.example.toml  daily_report_example.md  sample_data.sql
scripts/: manage_service.sh  run_daily_pipeline.sh  run_garmin_daily.sh  start_dashboard.sh  start_vitals_receiver.sh
src/superhealth/: __init__.py  __main__.py  config.py  daily_pipeline.py  database.py  log_config.py  models.py  notifications.py  user_profile.py
src/superhealth/analysis/: analyze_garmin.py  causal.py  correlation.py  trends.py
src/superhealth/api/: vitals_receiver.py
src/superhealth/collectors/: fetch_garmin.py  outlook_collector.py  send_garmin_report.py  weather_collector.py
src/superhealth/core/: __init__.py  assessment_models.py  baichuan_advisor.py  claude_advisor.py  document_extractor.py  health_profile_builder.py  llm_advisor.py  model_selector.py
src/superhealth/dashboard/: __init__.py  app.py  data_loader.py
src/superhealth/dashboard/components/: __init__.py  charts.py  disclaimer.py  gauges.py
src/superhealth/dashboard/prediction/: __init__.py  hyperglycemia_risk.py  hyperlipidemia_risk.py  hypertension_risk.py  trend_predictor.py  uric_acid_risk.py
src/superhealth/dashboard/views/: __init__.py  analysis_page.py  config_page.py  correlations.py  data_management_page.py  experiment_page.py  export.py  garmin_data.py  goal_loop_page.py  goals_page.py  health_profile_page.py  health_record_page.py  historical_review.py  lab_results.py  lab_risk_page.py  overview.py  prediction.py  preferences_page.py  profile_page.py  trends.py  upload.py
src/superhealth/feedback/: __init__.py  auto_feedback.py  effect_tracker.py  experiment_manager.py  feedback_collector.py  pipeline_diff.py  strategy_learner.py
src/superhealth/goals/: __init__.py  __main__.py  cli.py  manager.py  metrics.py  models.py
src/superhealth/insights/: __init__.py  llm_insights.py
src/superhealth/reminders/: __init__.py  appointment_scheduler.py  reminder_config.py  reminder_notifier.py
src/superhealth/reports/: __init__.py  advanced_daily_report.py  daily_report.py
src/superhealth/tracking/: medication_tracker.py
tests/: conftest.py  test_assessment.py  test_causal.py  test_config.py  test_config_page.py  test_config_save.py  test_correlation.py  test_daily_pipeline.py  test_dashboard_historical_review.py  test_dashboard_lab_results.py  test_dashboard_overview.py  test_dashboard_predictions.py  test_database.py  test_database_extended.py  test_db_security.py  test_document_extractor.py  test_effect_tracker.py  test_experiment_manager.py  test_feedback_collector.py  test_goals.py  test_health_profile_builder.py  test_llm_advisor.py  test_models.py  test_notifications.py  test_parse.py  test_reminders.py  test_reports.py  test_score.py  test_tracking.py  test_trends.py  test_vitals_receiver.py  test_weather_collector.py
tests/fixtures/: 2025-04-25.md  2025-04-26.md
