[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "superhealth"
version = "0.1.0"
description = "Personal health data management system with LLM-powered insights"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["health", "garmin", "fitness", "llm", "sqlite", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "pydantic>=2.0",
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "plotly>=5.0.0",
    "streamlit>=1.28.0,<1.41.0",
    "flask>=2.3.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "tomli-w>=1.0",
]
garmin = ["playwright>=1.40.0"]
claude = ["anthropic>=0.20.0"]
baichuan = ["openai>=1.0.0"]
all = [
    "playwright>=1.40.0",
    "anthropic>=0.20.0",
    "openai>=1.0.0",
    "tomli-w>=1.0",
]

[project.scripts]
superhealth-pipeline = "superhealth.daily_pipeline:main"
superhealth-goals = "superhealth.goals.cli:main"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/superhealth"
Repository = "https://github.com/YOUR_USERNAME/superhealth"
Issues = "https://github.com/YOUR_USERNAME/superhealth/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
